:rocket: etl and to colab for training

--- a/notebooks/eda_runways.ipynb
+++ b/notebooks/eda_runways.ipynb
@@ -825,6 +825,35 @@
     "- Generate a reduced submission file (~200,000 rows) based on predictions, focusing on detected runways and their buffer regions.\n",
     "\"\"\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPSG:4326\n"
+     ]
+    }
+   ],
+   "source": [
+    "import geopandas as gpd\n",
+    "\n",
+    "# Define the file path to the runways data\n",
+    "runways_file = '../pac_2024_training/pac_2024_training.shp'  # Adjust the path as necessary\n",
+    "\n",
+    "# Load the runways data\n",
+    "runways_gdf = gpd.read_file(runways_file)\n",
+    "\n",
+    "# Get the CRS of the runways data\n",
+    "runways_crs = runways_gdf.crs\n",
+    "\n",
+    "# Print the CRS\n",
+    "print(runways_crs)"
+   ]
   }
  ],
  "metadata": {
