--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -154,32 +154,22 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
-      ],
-      "text/plain": [
-       "<wandb.sdk.wandb_run.Run at 0x7a11ed424560>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# %%\n",
     "# Debug flag: Set to True to run on CPU, False to use GPU if available\n",
     "# With DEBUG == True, test and train sets are reduced to 10 samples each\n",
-    "DEBUG = True\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "DEBUG = False\n",
     "\n",
     "TRAINING_DATASET = 'cross'\n",
     "TRAIN_PERCENTAGE = 0.8\n",
     "\n",
     "# Number of epochs to train for\n",
-    "NUM_EPOCHS = 10 if not DEBUG else 2  # Adjust as needed\n",
+    "NUM_EPOCHS = 50 if not DEBUG else 2  # Adjust as needed\n",
     "\n",
     "BATCH_SIZE = 32 if USING_COLAB else 4\n",
     "\n",
@@ -202,7 +192,12 @@
     "wandb.init(project='secret-runway-detection',\n",
     "           mode='online' if not DEBUG else 'dryrun',\n",
     "           dir='..',\n",
-    "           )"
+    "           tags=[TRAINING_DATASET, 'colab' if USING_COLAB else 'local'],\n",
+    "           job_type='train',\n",
+    "           )\n",
+    "\n",
+    "if not wandb.run.name:\n",
+    "    wandb.run.name = f\"Run from {pd.Timestamp.now()}\""
    ]
   },
   {
@@ -221,15 +216,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total files: 1579\n",
+      "Total files: 2130\n",
       "Total strips: 113\n",
-      "Training files: 1259\n",
-      "Testing files: 320\n"
+      "Training files: 1700\n",
+      "Testing files: 430\n"
      ]
     }
    ],
    "source": [
-    "train_dir = Path(f'../training_data_{TRAINING_DATASET}')\n",
+    "train_dir = Path(f'../training_data/training_data_{TRAINING_DATASET}')\n",
+    "\n",
+    "if USING_COLAB:\n",
+    "    # Unzip the training data which is at f\"{train_dir}.zip\" using python\n",
+    "    import zipfile\n",
+    "    with zipfile.ZipFile(f\"{train_dir}.zip\", 'r') as zip_ref:\n",
+    "        zip_ref.extractall(f\"{train_dir}\")\n",
     "\n",
     "images_dir = train_dir / 'images'\n",
     "labels_dir = train_dir / 'labels'\n",
@@ -325,57 +326,11 @@
     ")\n",
     "\n",
     "if DEBUG:\n",
-    "    train_dataset.samples = train_dataset.samples[:40]\n",
+    "    train_dataset.samples = train_dataset.samples[:10]\n",
     "    val_dataset.samples = val_dataset.samples[:10]\n",
     "\n",
     "train_dataloader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
     "val_dataloader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input size: 5\n",
-      "After layer 1: Output size = 10\n",
-      "After layer 2: Output size = 20\n",
-      "After layer 3: Output size = 40\n",
-      "After layer 4: Output size = 80\n",
-      "After layer 5: Output size = 160\n",
-      "After layer 6: Output size = 320\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Python code to calculate the output size before interpolation\n",
-    "\n",
-    "# Initialize input size\n",
-    "H_in = 5\n",
-    "print(f\"Input size: {H_in}\")\n",
-    "\n",
-    "# Define the decoder layers\n",
-    "layers = [\n",
-    "    {'kernel_size': 4, 'stride': 2, 'padding': 1},  # Layer 1\n",
-    "    {'kernel_size': 4, 'stride': 2, 'padding': 1},  # Layer 2\n",
-    "    {'kernel_size': 4, 'stride': 2, 'padding': 1},  # Layer 3\n",
-    "    {'kernel_size': 4, 'stride': 2, 'padding': 1},  # Layer 4\n",
-    "    {'kernel_size': 4, 'stride': 2, 'padding': 1},  # Layer 5\n",
-    "    {'kernel_size': 4, 'stride': 2, 'padding': 1},  # Layer 6\n",
-    "]\n",
-    "\n",
-    "# Calculate output size after each layer\n",
-    "for idx, layer in enumerate(layers):\n",
-    "    kernel_size = layer['kernel_size']\n",
-    "    stride = layer['stride']\n",
-    "    padding = layer['padding']\n",
-    "    H_out = (H_in - 1) * stride - 2 * padding + kernel_size\n",
-    "    print(f\"After layer {idx+1}: Output size = {H_out}\")\n",
-    "    H_in = H_out  # Update input size for next layer"
    ]
   },
   {
@@ -387,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -395,14 +350,17 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: yacs in /home/emil/Desktop/secret-runway-detection/.venv/lib/python3.12/site-packages (0.1.8)\n",
-      "Requirement already satisfied: PyYAML in /home/emil/Desktop/secret-runway-detection/.venv/lib/python3.12/site-packages (from yacs) (6.0.2)\n"
+      "Requirement already satisfied: PyYAML in /home/emil/Desktop/secret-runway-detection/.venv/lib/python3.12/site-packages (from yacs) (6.0.2)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1086553/2131875498.py:16: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/tmp/ipykernel_1877490/2131875498.py:16: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  checkpoint = torch.load(model_path, map_location=device)\n"
      ]
     },
@@ -471,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,17 +480,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 1, Batch 10] Training Loss: 0.6757\n",
-      "Epoch 1 Validation Loss: 0.7338\n",
-      "[Epoch 2, Batch 10] Training Loss: 0.6608\n",
-      "Epoch 2 Validation Loss: 0.7215\n",
+      "Epoch 1 Validation Loss: 0.7344\n",
+      "Epoch 2 Validation Loss: 0.7354\n",
       "Training complete.\n"
      ]
     }
@@ -629,13 +585,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Run from 2024-11-01 16:01:03.670882'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Initialize W&B run if not already initialized\n",
-    "wandb.init(project='your_project_name')\n",
-    "\n",
+    "wandb.run.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved to '../checkpoints/Run from 2024-11-01 16:01:03.670882.pth'.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Artifact model>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Create a 'checkpoints' directory within the current directory\n",
     "os.makedirs('../checkpoints', exist_ok=True)\n",
     "\n",
@@ -658,9 +649,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b693d886293a4b259e82b6b633bea8b0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='0.000 MB of 0.000 MB uploaded\\r'), FloatProgress(value=1.0, max=1.0)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>epoch</td><td>▁█</td></tr><tr><td>validation_loss</td><td>▁█</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>epoch</td><td>2</td></tr><tr><td>validation_loss</td><td>0.73541</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "You can sync this run to the cloud by running:<br/><code>wandb sync ../wandb/offline-run-20241101_160103-nps1tdga<code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>../wandb/offline-run-20241101_160103-nps1tdga/logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "wandb.finish()"
    ]
@@ -674,9 +721,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "# Training Summary\n",
+      "\n",
+      "- **Model**: Swin Transformer (GFM) loaded from pre-trained checkpoint.\n",
+      "- **Dataset**: Landing strips with Sentinel-2 imagery.\n",
+      "- **Loss Function**: BCEWithLogitsLoss.\n",
+      "- **Optimizer**: Adam with learning rate scheduler.\n",
+      "- **Logging**: Weights & Biases (wandb) for experiment tracking.\n",
+      "- **Device**: cpu\n",
+      "- **Epochs**: 2\n",
+      "\n",
+      "Training has been completed and the model has been saved.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\"\"\n",
     "# Training Summary\n",
