--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -75,7 +75,6 @@
     "import logging\n",
     "from pathlib import Path\n",
     "import re\n",
-    "from torcheval.metrics.functional import binary_accuracy\n",
     "\n",
     "# If on Google colab, chdir to /content/drive/MyDrive/Secret_Runway_Detection\n",
     "try:\n",
@@ -230,7 +229,7 @@
     "    # Unzip the training data which is at f\"{train_dir}.zip\" using python\n",
     "    import zipfile\n",
     "    with zipfile.ZipFile(f\"{train_dir}.zip\", 'r') as zip_ref:\n",
-    "        zip_ref.extractall(f\"{train_dir}\")\n",
+    "        zip_ref.extractall(\"../training_data\")\n",
     "\n",
     "images_dir = train_dir / 'images'\n",
     "labels_dir = train_dir / 'labels'\n",
