--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -117,17 +117,48 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Using wandb-core as the SDK backend. Please refer to https://wandb.me/wandb-core for more information.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Using device: cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %%\n",
+    "# Debug flag: Set to True to run on CPU, False to use GPU if available\n",
+    "# With DEBUG == True, test and train sets are reduced to 10 samples each\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "DEBUG = True\n",
+    "\n",
+    "# Device configuration\n",
+    "device = torch.device('cpu') if DEBUG else torch.device(\n",
+    "    'cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "print(f\"Using device: {device}\")\n",
+    "\n",
+    "# Set random seeds for reproducibility\n",
+    "np.random.seed(RANDOM_SEED)\n",
+    "torch.manual_seed(RANDOM_SEED)\n",
+    "random.seed(RANDOM_SEED)\n",
+    "\n",
+    "# Set up logging\n",
+    "logging.basicConfig(level=logging.INFO)\n",
+    "# logging.getLogger('secret_runway_detection.train_utils').setLevel(logging.DEBUG)\n",
+    "logging.getLogger('secret_runway_detection.train_utils').setLevel(logging.INFO)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Using wandb-core as the SDK backend. Please refer to https://wandb.me/wandb-core for more information.\n"
      ]
     },
     {
@@ -156,48 +187,35 @@
     }
    ],
    "source": [
-    "# %%\n",
-    "# Debug flag: Set to True to run on CPU, False to use GPU if available\n",
-    "# With DEBUG == True, test and train sets are reduced to 10 samples each\n",
-    "import pandas as pd\n",
-    "\n",
-    "\n",
-    "DEBUG = False\n",
-    "\n",
-    "TRAINING_DATASET = 'cross'\n",
-    "TRAIN_PERCENTAGE = 0.8\n",
-    "\n",
-    "# Number of epochs to train for\n",
-    "NUM_EPOCHS = 50 if not DEBUG else 2  # Adjust as needed\n",
-    "\n",
-    "BATCH_SIZE = 32 if USING_COLAB else 4\n",
-    "\n",
-    "# Device configuration\n",
-    "device = torch.device('cpu') if DEBUG else torch.device(\n",
-    "    'cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "print(f\"Using device: {device}\")\n",
-    "\n",
-    "# Set random seeds for reproducibility\n",
-    "np.random.seed(RANDOM_SEED)\n",
-    "torch.manual_seed(RANDOM_SEED)\n",
-    "random.seed(RANDOM_SEED)\n",
-    "\n",
-    "# Set up logging\n",
-    "logging.basicConfig(level=logging.INFO)\n",
-    "# logging.getLogger('secret_runway_detection.train_utils').setLevel(logging.DEBUG)\n",
-    "logging.getLogger('secret_runway_detection.train_utils').setLevel(logging.INFO)\n",
+    "config = {\n",
+    "    'training_dataset': 'cross',\n",
+    "    'train_percentage': 0.8,\n",
+    "    'num_epochs': 50 if not DEBUG else 2,\n",
+    "    'batch_size': 32 if USING_COLAB else 4,\n",
+    "    'learning_rate': 1e-4,\n",
+    "    'lr_step_size': 10,\n",
+    "    'lr_gamma': 0.7,\n",
+    "}\n",
     "\n",
     "# Initialize wandb\n",
     "wandb.init(project='secret-runway-detection',\n",
     "           mode='online' if not DEBUG else 'dryrun',\n",
     "           dir='..',\n",
-    "           tags=[TRAINING_DATASET, 'colab' if USING_COLAB else 'local'],\n",
+    "           tags=[config['training_dataset'], 'colab' if USING_COLAB else 'local'],\n",
     "           job_type='train',\n",
+    "           config=config,\n",
     "           )\n",
     "\n",
     "if not wandb.run.name:\n",
     "    wandb.run.name = f\"Run from {pd.Timestamp.now()}\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -208,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +241,7 @@
     }
    ],
    "source": [
-    "train_dir = Path(f'../training_data/training_data_{TRAINING_DATASET}')\n",
+    "train_dir = Path(f'../training_data/training_data_{config['training_dataset']}')\n",
     "\n",
     "if USING_COLAB:\n",
     "    # Unzip the training data which is at f\"{train_dir}.zip\" using python\n",
@@ -268,7 +286,7 @@
     "\n",
     "# Calculate split index for strips\n",
     "num_strips = len(strip_numbers)\n",
-    "split_index = int(num_strips * TRAIN_PERCENTAGE)\n",
+    "split_index = int(num_strips * config['train_percentage'])\n",
     "\n",
     "# Split strip numbers into train and test sets\n",
     "train_strip_numbers = strip_numbers[:split_index]\n",
@@ -289,7 +307,7 @@
     "\n",
     "# Calculate split index for possibly_empty files\n",
     "num_possibly_empty = len(possibly_empty_files)\n",
-    "split_index_empty = int(num_possibly_empty * TRAIN_PERCENTAGE)\n",
+    "split_index_empty = int(num_possibly_empty * config['train_percentage'])\n",
     "\n",
     "# Split possibly_empty files into train and test sets\n",
     "train_possibly_empty_files = possibly_empty_files[:split_index_empty]\n",
@@ -328,8 +346,8 @@
     "    train_dataset.samples = train_dataset.samples[:10]\n",
     "    val_dataset.samples = val_dataset.samples[:10]\n",
     "\n",
-    "train_dataloader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
-    "val_dataloader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=False)"
+    "train_dataloader = DataLoader(train_dataset, batch_size=config['batch_size'], shuffle=True)\n",
+    "val_dataloader = DataLoader(val_dataset, batch_size=config['batch_size'], shuffle=False)"
    ]
   },
   {
@@ -341,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +377,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1877490/2131875498.py:16: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/tmp/ipykernel_2832668/2131875498.py:16: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  checkpoint = torch.load(model_path, map_location=device)\n"
      ]
     },
@@ -428,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,22 +464,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define loss function and optimizer\n",
     "# Suitable for binary classification with logits\n",
     "criterion = nn.BCEWithLogitsLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=1e-4)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=config['learning_rate'])\n",
     "\n",
     "# Optionally, define a learning rate scheduler\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=7, gamma=0.1)"
+    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=config['lr_step_size'], gamma=config['lr_gamma'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +514,7 @@
     "# Before the training loop, watch the model\n",
     "wandb.watch(model, criterion=criterion, log=\"all\", log_freq=10)\n",
     "\n",
-    "for epoch in range(NUM_EPOCHS):\n",
+    "for epoch in range(config['num_epochs']):\n",
     "    model.train()\n",
     "    running_loss = 0.0\n",
     "    for i, (inputs, labels) in enumerate(train_dataloader):\n",
@@ -584,16 +602,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Run from 2024-11-01 16:01:03.670882'"
+       "'Run from 2024-11-03 09:39:55.924534'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,14 +622,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model saved to '../checkpoints/Run from 2024-11-01 16:01:03.670882.pth'.\n"
+      "Model saved to '../checkpoints/Run from 2024-11-03 09:39:55.924534.pth'.\n"
      ]
     },
     {
@@ -620,7 +638,7 @@
        "<Artifact model>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,13 +666,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b693d886293a4b259e82b6b633bea8b0",
+       "model_id": "62e012253f834ed3af8f09062ef55d38",
        "version_major": 2,
        "version_minor": 0
       },
@@ -685,7 +703,7 @@
     {
      "data": {
       "text/html": [
-       "You can sync this run to the cloud by running:<br/><code>wandb sync ../wandb/offline-run-20241101_160103-nps1tdga<code>"
+       "You can sync this run to the cloud by running:<br/><code>wandb sync ../wandb/offline-run-20241103_093955-2os90bou<code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -697,7 +715,7 @@
     {
      "data": {
       "text/html": [
-       "Find logs at: <code>../wandb/offline-run-20241101_160103-nps1tdga/logs</code>"
+       "Find logs at: <code>../wandb/offline-run-20241103_093955-2os90bou/logs</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -709,54 +727,6 @@
    ],
    "source": [
     "wandb.finish()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " ## 10. Conclusion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "# Training Summary\n",
-      "\n",
-      "- **Model**: Swin Transformer (GFM) loaded from pre-trained checkpoint.\n",
-      "- **Dataset**: Landing strips with Sentinel-2 imagery.\n",
-      "- **Loss Function**: BCEWithLogitsLoss.\n",
-      "- **Optimizer**: Adam with learning rate scheduler.\n",
-      "- **Logging**: Weights & Biases (wandb) for experiment tracking.\n",
-      "- **Device**: cpu\n",
-      "- **Epochs**: 2\n",
-      "\n",
-      "Training has been completed and the model has been saved.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"\"\"\n",
-    "# Training Summary\n",
-    "\n",
-    "- **Model**: Swin Transformer (GFM) loaded from pre-trained checkpoint.\n",
-    "- **Dataset**: Landing strips with Sentinel-2 imagery.\n",
-    "- **Loss Function**: BCEWithLogitsLoss.\n",
-    "- **Optimizer**: Adam with learning rate scheduler.\n",
-    "- **Logging**: Weights & Biases (wandb) for experiment tracking.\n",
-    "- **Device**: {}\n",
-    "- **Epochs**: {}\n",
-    "\n",
-    "Training has been completed and the model has been saved.\n",
-    "\"\"\".format(device, NUM_EPOCHS))"
    ]
   }
  ],
