add early stopping

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -99,7 +99,6 @@
     ")\n",
     "from secret_runway_detection.dataset import LandingStripDataset, SegmentationTransform\n",
     "from secret_runway_detection.train_utils import (\n",
-    "    add_buffer_to_label,\n",
     "    RANDOM_SEED\n",
     ")"
    ]
@@ -131,7 +130,7 @@
     "import pandas as pd\n",
     "\n",
     "\n",
-    "DEBUG = True\n",
+    "DEBUG = False\n",
     "\n",
     "# Device configuration\n",
     "device = torch.device('cpu') if DEBUG else torch.device(\n",
@@ -146,7 +145,7 @@
     "# Set up logging\n",
     "logging.basicConfig(level=logging.INFO)\n",
     "# logging.getLogger('secret_runway_detection.train_utils').setLevel(logging.DEBUG)\n",
-    "logging.getLogger('secret_runway_detection.train_utils').setLevel(logging.INFO)\n"
+    "logging.getLogger('secret_runway_detection.train_utils').setLevel(logging.INFO)"
    ]
   },
   {
@@ -192,16 +191,18 @@
     "    'train_percentage': 0.8,\n",
     "    'num_epochs': 50 if not DEBUG else 2,\n",
     "    'batch_size': 32 if USING_COLAB else 4,\n",
-    "    'learning_rate': 1e-4,\n",
+    "    'learning_rate': 1e-3,\n",
     "    'lr_step_size': 10,\n",
-    "    'lr_gamma': 0.7,\n",
+    "    'lr_gamma': 0.3,\n",
+    "    'early_stopping_patience': 3,\n",
     "}\n",
     "\n",
     "# Initialize wandb\n",
     "wandb.init(project='secret-runway-detection',\n",
     "           mode='online' if not DEBUG else 'dryrun',\n",
     "           dir='..',\n",
-    "           tags=[config['training_dataset'], 'colab' if USING_COLAB else 'local'],\n",
+    "           tags=[config['training_dataset'],\n",
+    "                 'colab' if USING_COLAB else 'local'],\n",
     "           job_type='train',\n",
     "           config=config,\n",
     "           )\n",
@@ -241,7 +242,8 @@
     }
    ],
    "source": [
-    "train_dir = Path(f'../training_data/training_data_{config['training_dataset']}')\n",
+    "train_dir = Path(\n",
+    "    f'../training_data/training_data_{config[\"training_dataset\"]}')\n",
     "\n",
     "if USING_COLAB:\n",
     "    # Unzip the training data which is at f\"{train_dir}.zip\" using python\n",
@@ -346,8 +348,10 @@
     "    train_dataset.samples = train_dataset.samples[:10]\n",
     "    val_dataset.samples = val_dataset.samples[:10]\n",
     "\n",
-    "train_dataloader = DataLoader(train_dataset, batch_size=config['batch_size'], shuffle=True)\n",
-    "val_dataloader = DataLoader(val_dataset, batch_size=config['batch_size'], shuffle=False)"
+    "train_dataloader = DataLoader(\n",
+    "    train_dataset, batch_size=config['batch_size'], shuffle=True)\n",
+    "val_dataloader = DataLoader(\n",
+    "    val_dataset, batch_size=config['batch_size'], shuffle=False)"
    ]
   },
   {
@@ -474,7 +478,8 @@
     "optimizer = optim.Adam(model.parameters(), lr=config['learning_rate'])\n",
     "\n",
     "# Optionally, define a learning rate scheduler\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=config['lr_step_size'], gamma=config['lr_gamma'])"
+    "scheduler = optim.lr_scheduler.StepLR(\n",
+    "    optimizer, step_size=config['lr_step_size'], gamma=config['lr_gamma'])"
    ]
   },
   {
@@ -511,6 +516,12 @@
     }
    ],
    "source": [
+    "# Initialize early stopping variables before the training loop\n",
+    "best_val_loss = float('inf')\n",
+    "# Number of epochs to wait before stopping\n",
+    "patience = config['early_stopping_patience']\n",
+    "counter = 0   # Counter for early stopping\n",
+    "\n",
     "# Before the training loop, watch the model\n",
     "wandb.watch(model, criterion=criterion, log=\"all\", log_freq=10)\n",
     "\n",
@@ -541,7 +552,8 @@
     "        # Log every 10 batches or last batch\n",
     "        if (i + 1) % 10 == 0 or i == len(train_dataloader):\n",
     "            avg_loss = running_loss / 10\n",
-    "            print(f\"[Epoch {epoch + 1}, Batch {i + 1}] Training Loss: {avg_loss:.4f}\")\n",
+    "            print(f\"[Epoch {epoch + 1}, Batch {i +\n",
+    "                  1}] Training Loss: {avg_loss:.4f}\")\n",
     "\n",
     "            # Log metrics to wandb\n",
     "            wandb.log({\n",
@@ -579,6 +591,23 @@
     "        'epoch': epoch + 1,\n",
     "        'validation_loss': avg_val_loss\n",
     "    })\n",
+    "\n",
+    "    # Early Stopping Check\n",
+    "    if avg_val_loss < best_val_loss:\n",
+    "        best_val_loss = avg_val_loss\n",
+    "        counter = 0\n",
+    "        # Save the model\n",
+    "        torch.save(model.state_dict(), 'best_model.pth')\n",
+    "        print(f\"Validation loss decreased to {\n",
+    "              avg_val_loss:.4f}, saving model.\")\n",
+    "    else:\n",
+    "        counter += 1\n",
+    "        print(f\"No improvement in validation loss for {counter} epoch(s).\")\n",
+    "        if counter >= patience:\n",
+    "            print(\"Early stopping triggered.\")\n",
+    "            # Optionally log early stopping to wandb\n",
+    "            wandb.log({'early_stopping_epoch': epoch + 1})\n",
+    "            break\n",
     "\n",
     "    # Step the scheduler\n",
     "    scheduler.step()\n",
@@ -727,6 +756,17 @@
    ],
    "source": [
     "wandb.finish()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if USING_COLAB:\n",
+    "    from google.colab import runtime\n",
+    "    runtime.unassign()"
    ]
   }
  ],
